@@ -1,3 +1,8 @@
+2001-05-28  Pascal Davoust  <davoustp@yahoo.com>
+
+	* src/double.h: Add (u4) cast to IEEEfloat constructor
+	calls to avoid bad code generation with VC++.
+
 2001-05-26  Eric Blake  <ebb9@email.byu.edu>
 
 	* src/expr.cpp (Semantic::ProcessConditionalExpression):
